# Skunk

./: CMakeLists.txt  README.md  main.cpp  sdlcontext.cxx
include/: Controller.h  audio.h  camera.h  sdlcontext.h  shapes.h  utils.h
libs/: CMakeLists.txt
src/: audio.c  camera.cpp  sdlcontext.cpp  shapes.cpp  utils.cpp
